# fastapi_migrate

./: README.md  pyproject.toml
examples/: cli.py
examples/demo/: app.py
examples/demo/models/: __init__.py  base.py  note.py
examples/migrations/: env.py
examples/migrations/versions/: a10a509e09e4_.py
fastapi_migrate/: __init__.py  cli.py  command.py
fastapi_migrate/templates/fastapi/: env.py
