[tool.poetry]
name = "fastapi_migrate"
version = "0.1.0"
description = ""
authors = ["pengyj <p15281826276@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.58.1"
alembic = "^1.4.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
